<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dn_evtukhova.mainjournal1.fragments.FragmentBuget">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:text="Введите запланированный уровень расхода:" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >



            <EditText
                android:id="@+id/bugetMounth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/buget_on_mounth"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/bugetYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/buget_year"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/bugetWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/buget_week"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/bugetDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/buget_day"
                android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/buttonBuget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_buget" />


    </LinearLayout>

</FrameLayout>
