<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dn_evtukhova.mainjournal1.fragments.FragmentJournalExpediture">



        <!-- TODO: Update blank fragment layout -->


                <TextView
                    android:id="@+id/text_for_j_e"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/journal_expediture_text1" />

                <TextView
                    android:id="@+id/textViewDateJournal"
                    android:layout_below="@+id/text_for_j_e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:textSize="28sp"/>

                <Spinner
                    android:layout_below="@+id/textViewDateJournal"
                    android:id="@+id/spinnerJournal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="25dp"
                    android:spinnerMode="dialog"
                    android:visibility="visible" />




                <ListView
                    android:id="@+id/list_journal_expediture_f"
                    android:layout_below="@id/spinnerJournal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/text_sum_expediture">



                </ListView>
           <TextView
               android:id="@+id/text_sum_expediture"
                android:layout_above="@id/text_sum_buget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expediture_for_period"
               android:textSize="18sp"
               android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/text_sum_buget"
                android:layout_above="@id/buttonJournal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buget_for_period"
                android:textSize="18sp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/sum_expediture"

                android:layout_above="@id/sum_buget"
                android:layout_toRightOf="@id/text_sum_expediture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textSize="18sp"/>
            <TextView

                android:id="@+id/sum_buget"
                android:layout_above="@id/buttonJournal"
                android:layout_toRightOf="@id/text_sum_buget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textSize="18sp"/>
                <Button

                    android:id="@+id/buttonJournal"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tape_expediture_button"
                    android:layout_gravity="left"/>





</RelativeLayout>
