<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerTapeExpediture"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.dn_evtukhova.mainjournal1.fragments.FragmentTapeExpediture">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank_fragment_tape_expediture" />
        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textSize="48sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/tape_expediture_category"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/tape_exprditure_plan"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/tape_expediture_fact"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="28dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Продукты питания"
                android:id="@+id/textView5"/>

            <TextView
                android:layout_width="28dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"            android:gravity="right"
                android:text="10000"
                android:layout_gravity="left"
                android:id="@+id/textView6"/>

            <TextView
                android:layout_width="28dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"            android:gravity="right"
                android:text="2350"
                android:layout_gravity="left"
                android:id="@+id/textView7"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="28dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Одежда"
                android:id="@+id/textView8"/>

            <TextView
                android:layout_width="28dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"            android:gravity="right"
                android:text="500"
                android:layout_gravity="left"
                android:id="@+id/textView9"/>

            <TextView
                android:layout_width="28dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"            android:gravity="right"
                android:text="5000"
                android:layout_gravity="left"
                android:id="@+id/textView10"/>
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >


        </ListView>




</LinearLayout>



</FrameLayout>
